--- a/astrocalculator/astrocalc.web/index.html
+++ b/astrocalculator/astrocalc.web/index.html
@@ -13,6 +13,7 @@
     <script src="ng/modules/astroapp.js"></script>
 </head>
 <body ng-app="astroapp">
+    <!-- sample change -->
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
