renaming the model properties to suit json transit

--- a/astrocalculator/astrocalc.web/index.html
+++ b/astrocalculator/astrocalc.web/index.html
@@ -11,6 +11,7 @@
     <script src="node_modules/angular/angular.js"></script>
     <script src="node_modules/angular-route/angular-route.js"></script>
     <script src="ng/modules/astroapp.js"></script>
+    <script src="ng/controllers/ctrollerSunrises.js"></script>
 </head>
 <body ng-app="astroapp">
     <!-- sample change -->
