--- a/astrocalculator/astrocalc.web/index.html
+++ b/astrocalculator/astrocalc.web/index.html
@@ -12,6 +12,7 @@
     <script src="node_modules/angular-route/angular-route.js"></script>
     <script src="ng/modules/astroapp.js"></script>
     <script src="ng/controllers/ctrollerEphemeris.js"></script>
+    <script src="ng/controllers/locationController.js"></script>
     <script src="ng/services/svcWebApi.js"></script>
     <link href="Content/styles/astrocalc.css" rel="stylesheet" />
 </head>
