--- a/astrocalculator/astrocalc.web/index.html
+++ b/astrocalculator/astrocalc.web/index.html
@@ -7,51 +7,83 @@
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
     <link href="node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
-    <link href="node_modules/bootswatch/yeti/bootstrap.css" rel="stylesheet" />
+    <link href="node_modules/bootswatch/flatly/bootstrap.css" rel="stylesheet" />
     <script src="node_modules/angular/angular.js"></script>
     <script src="node_modules/angular-route/angular-route.js"></script>
     <script src="ng/modules/astroapp.js"></script>
     <script src="ng/controllers/ctrollerEphemeris.js"></script>
-    <script src="ng/controllers/locationController.js"></script>
+    <script src="ng/controllers/ctrollerLogin.js"></script>
     <script src="ng/services/svcWebApi.js"></script>
+    <script src="ng/services/svcCache.js"></script>
+    <script src="ng/directives/busy-animation.js"></script>
+
     <link href="Content/styles/astrocalc.css" rel="stylesheet" />
 </head>
 <body ng-app="astroapp">
-    <!-- sample change -->
-    <!-- sample change -->
-    <nav class="navbar navbar-inverse">
+
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">AstroCalculator</a>
+                <a class="navbar-brand">Astro Calculator</a>
             </div>
-
-            <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-2">
-                <ul class="nav navbar-nav">
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Settings <span class="caret"></span></a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">One more separated link</a></li>
-                        </ul>
-                    </li>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a>Settings</a></li>
                 </ul>
             </div>
         </div>
     </nav>
     <br />
-    <div ng-view=""></div>
+    <div ng-view="" class="row" style="margin-top:5em"></div>
     <br />
-   
+    <div class="well row">
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+            <div class="col-md-2 col-lg-2 col-sm-2 col-xs-2">
+                <h2>
+                    <span class="glyphicon glyphicon-calendar"></span>
+                </h2>
+            </div>
+            <div class="col-md-10 col-lg-10 col-sm-10 col-xs-10">
+                <p>Tincidunt integer eu augue augue nunc elit dolor, luctus placerat scelerisque euismod, iaculis eu lacus nunc mi elit, vehicula ut laoreet ac, aliquam sit amet justo nunc tempor, metus vel.</p>
+            </div>
+
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+            <div class="col-md-2 col-lg-2 col-sm-2 col-xs-2">
+                <h2>
+                    <span class="glyphicon glyphicon-map-marker"></span>
+                </h2>
+            </div>
+            <div class="col-md-10 col-lg-10 col-sm-10 col-xs-10">
+                <p>Tincidunt integer eu augue augue nunc elit dolor, luctus placerat scelerisque euismod, iaculis eu lacus nunc mi elit, vehicula ut laoreet ac, aliquam sit amet justo nunc tempor, metus vel.</p>
+            </div>
+
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+            <div class="col-md-2 col-lg-2 col-sm-2 col-xs-2">
+                <h2>
+                    <span class="glyphicon glyphicon-adjust"></span>
+                </h2>
+            </div>
+            <div class="col-md-10 col-lg-10 col-sm-10 col-xs-10">
+                <p>Tincidunt integer eu augue augue nunc elit dolor, luctus placerat scelerisque euismod, iaculis eu lacus nunc mi elit, vehicula ut laoreet ac, aliquam sit amet justo nunc tempor, metus vel.</p>
+            </div>
+
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-6 col-lg-offset-5 col-md-6 col-md-offset-5 col-sm-12 col-xs-12">
+            <p class="text-success">
+                <span class="glyphicon glyphicon-copyright-mark"></span> &nbsp; 2016, Crackdatapots 
+            </p>
+        </div>
+
+    </div>
 </body>
 </html>
