adding api support for login function

--- a/astrocalculator/astrocalc.web/index.html
+++ b/astrocalculator/astrocalc.web/index.html
@@ -10,12 +10,17 @@
     <link href="node_modules/bootswatch/flatly/bootstrap.css" rel="stylesheet" />
     <script src="node_modules/angular/angular.js"></script>
     <script src="node_modules/angular-route/angular-route.js"></script>
+    <!-- modules here -->
     <script src="ng/modules/astroapp.js"></script>
+    <!-- all the controllers here -->
     <script src="ng/controllers/ctrollerEphemeris.js"></script>
     <script src="ng/controllers/ctrollerLogin.js"></script>
+    <!-- all the services here -->
     <script src="ng/services/svcWebApi.js"></script>
     <script src="ng/services/svcCache.js"></script>
+    <!-- all the directives here -->
     <script src="ng/directives/busy-animation.js"></script>
+    <script src="ng/directives/warning-message.js"></script>
 
     <link href="Content/styles/astrocalc.css" rel="stylesheet" />
 </head>
