interim commit for the ephemeris development

--- a/astrocalculator/astrocalc.web/index.html
+++ b/astrocalculator/astrocalc.web/index.html
@@ -18,11 +18,16 @@
     <!-- all the services here -->
     <script src="ng/services/svcWebApi.js"></script>
     <script src="ng/services/svcCache.js"></script>
+
     <!-- all the directives here -->
     <script src="ng/directives/busy-animation.js"></script>
     <script src="ng/directives/warning-message.js"></script>
+    <script src="ng/directives/month-picker.js"></script>
+    <script src="ng/directives/location-picker.js"></script>
 
+    <!-- all the styles here-->
     <link href="Content/styles/astrocalc.css" rel="stylesheet" />
+    <link href="Content/styles/month-picker.css" rel="stylesheet" />
 </head>
 <body ng-app="astroapp">
 
@@ -85,7 +90,7 @@
     <div class="row">
         <div class="col-lg-6 col-lg-offset-5 col-md-6 col-md-offset-5 col-sm-12 col-xs-12">
             <p class="text-success">
-                <span class="glyphicon glyphicon-copyright-mark"></span> &nbsp; 2016, Crackdatapots 
+                <span class="glyphicon glyphicon-copyright-mark"></span> &nbsp; 2016, Crackdatapots
             </p>
         </div>
 
