working version of the ephemeris

--- a/astrocalculator/astrocalc.web/index.html
+++ b/astrocalculator/astrocalc.web/index.html
@@ -24,10 +24,12 @@
     <script src="ng/directives/warning-message.js"></script>
     <script src="ng/directives/month-picker.js"></script>
     <script src="ng/directives/location-picker.js"></script>
+    <script src="ng/directives/option-picker.js"></script>
 
     <!-- all the styles here-->
     <link href="Content/styles/astrocalc.css" rel="stylesheet" />
     <link href="Content/styles/month-picker.css" rel="stylesheet" />
+    <link href="Content/styles/option-picker.css" rel="stylesheet" />
 </head>
 <body ng-app="astroapp">
 
