interim showcase demo

--- a/astrocalculator/astrocalc.web/index.html
+++ b/astrocalculator/astrocalc.web/index.html
@@ -25,6 +25,7 @@
     <script src="ng/directives/month-picker.js"></script>
     <script src="ng/directives/location-picker.js"></script>
     <script src="ng/directives/option-picker.js"></script>
+    <script src="ng/directives/location-append.js"></script>
 
     <!-- all the styles here-->
     <link href="Content/styles/astrocalc.css" rel="stylesheet" />
